moved task list and failure messages into tabs; added additional fields to FailureMessage model
