# servers/cromwell/jobs/controllers/jobs_controller.py
@@ -98,7 +98,7 @@ def get_job(id, **kwargs):
     failures = None
     if job.get('failures'):
         failures = [
-            FailureMessage(failure=c['message']) for f in job['failures'] for c in f['causedBy']
+            format_failure(name, m) for name, metadata in job.get('calls', {}).items() for m in metadata if m.get('failures') is not None
         ]
 
     tasks = [
@@ -148,6 +148,16 @@ def format_task(task_name, task_metadata):
         call_root=latest_attempt.get('callRoot'),
         job_id=latest_attempt.get('subWorkflowId'),
         shard_statuses=None)
+
+
+def format_failure(task_name, metadata):
+    return FailureMessage(
+        task_name=task_name,
+        failure=metadata['failures'][0].get('message'),
+        timestamp=_parse_datetime(metadata.get('end')),
+        stdout=metadata.get('stdout'),
+        stderr=metadata.get('stderr'),
+        call_root=metadata.get('callRoot'))
 
 
 def format_scattered_task(task_name, task_metadata):
